<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="myName"
            type="be.equality.aboutme.MyName" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_name"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={myName.myName}"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txt_nickname"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="auto"
            android:ems="10"
            android:hint="@string/main_nickname_hint"
            android:inputType="textPersonName"
            android:text="@={myName.nickName}" />

        <Button
            android:id="@+id/btn_nickname"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:text="@string/main_done" />

        <ImageView
            android:id="@+id/img_star"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:contentDescription="@string/main_star"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/lbl_nickname"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={myName.nickName}"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/scroll_bio"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:paddingStart="@dimen/end_padding"
                android:paddingTop="@dimen/small_padding"
                android:paddingEnd="@dimen/end_padding"
                android:text="@string/main_bio" />
        </ScrollView>

    </LinearLayout>
</layout>